--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
       "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
       "express": "^4.17.1",
-      "joi": "^17.6.0"
-    },
-    "devDependencies": {
+      "joi": "^17.6.0",
       "@types/express": "^4.17.13",
       "@types/node": "^14.14.20",
       "ts-node": "^10.7.0",
       "typescript": "4.1.6"
-    }
-  }
+    }}
   
