--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "outDir": "dist",
+      "outDir": "dist",   // Ensures compiled files go to dist/
       "module": "CommonJS",
       "target": "ES6",
       "strict": true,
