--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
    "scripts": {
   "build": "tsc",  
-  "start": "node dist/index.ts" 
+  "start": "node dist/index.js"
 }
     ,
     "dependencies": {
