--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
    "scripts": {
   "build": "tsc",  
-  "start": "node dist/index.js"
+  "start": "node dist/index.js",
+   "vercel-build": "npm run build"
 }
     ,
     "dependencies": {
